--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 
 body{
     margin: 10px;
-    background-color: #rgb(168, 219, 223);
+    background-color: rgb(168, 219, 223);
 }
 
 .slot-number {
