--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,15 @@
 * {
     font-family: monospace;
+    color: white
+}
+
+h2 {
+    text-align: center;
 }
 
 body{
     margin: 10px;
-    background-color: rgb(168, 219, 223);
+    background-color: rgb(0, 0, 0);
 }
 
 .slot-number {
